RESOLVED FIXED233062
webView._isBeingInspected does not work with Service Worker pages
https://bugs.webkit.org/show_bug.cgi?id=233062
Summary webView._isBeingInspected does not work with Service Worker pages
Timothy Hatcher
Reported 2021-11-12 13:14:03 PST
When a service worker is loaded in a Page, we need to report its inspector frontend count up to the page's inspectorController so the client knows about it.
Attachments
Patch (3.96 KB, patch)
2021-11-12 13:15 PST, Timothy Hatcher
no flags
Radar WebKit Bug Importer
Comment 1 2021-11-12 13:14:21 PST
Timothy Hatcher
Comment 2 2021-11-12 13:15:47 PST
Devin Rousso
Comment 3 2021-11-12 18:07:08 PST
Comment on attachment 444096 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=444096&action=review r=me > Source/WebCore/inspector/WorkerInspectorController.cpp:140 > +#if ENABLE(SERVICE_WORKER) Style: I'd add a newline after this > Source/WebCore/inspector/WorkerInspectorController.cpp:160 > +#endif Style: i'd add a newline before this and `// ENABLE(SERVICE_WORKER)`
Timothy Hatcher
Comment 4 2021-11-12 19:18:56 PST
Comment on attachment 444096 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=444096&action=review >> Source/WebCore/inspector/WorkerInspectorController.cpp:140 >> +#if ENABLE(SERVICE_WORKER) > > Style: I'd add a newline after this Other places in the code don't do this, so I'll leave it as-is.
EWS
Comment 5 2021-11-12 19:22:21 PST
Committed r285771 (244215@main): <https://commits.webkit.org/244215@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444096 [details].
Note You need to log in before you can comment on or make changes to this bug.