webView._isBeingInspected does not work with Service Worker pages https://bugs.webkit.org/show_bug.cgi?id=233062 rdar://problem/85354982

Reviewed by Devin Rousso.

* inspector/WorkerInspectorController.cpp:
(WebCore::WorkerInspectorController::connectFrontend): Call updateServiceWorkerPageFrontendCount().
(WebCore::WorkerInspectorController::disconnectFrontend): Ditto.
(WebCore::WorkerInspectorController::updateServiceWorkerPageFrontendCount): Added.
* inspector/WorkerInspectorController.h: Added updateServiceWorkerPageFrontendCount().



Canonical link: https://commits.webkit.org/244215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285771 268f45cc-cd09-0410-ab3c-d52691b4dbfc